--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,59 +1,67 @@
 buildscript {
-    if (project == rootProject) {
-        repositories {
-            google()
-            mavenCentral()
-            jcenter()
-        }
-
-        dependencies {
-            classpath 'com.android.tools.build:gradle:3.5.3'
-        }
+  if (project == rootProject) {
+    repositories {
+      google()
+      mavenCentral()
+      jcenter()
+      flatDir {
+        dirs 'libs'
+      }
     }
+
+    dependencies {
+      classpath 'com.android.tools.build:gradle:4.1.2'
+    }
+  }
 }
 
 apply plugin: 'com.android.library'
 
 def safeExtGet(prop, fallback) {
-    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+  rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
 android {
-    compileSdkVersion safeExtGet('ScaleFusion_compileSdkVersion', 29)
-    defaultConfig {
-        minSdkVersion safeExtGet('ScaleFusion_minSdkVersion', 16)
-        targetSdkVersion safeExtGet('ScaleFusion_targetSdkVersion', 29)
-        versionCode 1
-        versionName "1.0"
+  compileSdkVersion safeExtGet('ScaleFusion_compileSdkVersion', 30)
+  buildToolsVersion "30.0.1"
 
-    }
+  defaultConfig {
+    minSdkVersion safeExtGet('ScaleFusion_minSdkVersion', 16)
+    targetSdkVersion safeExtGet('ScaleFusion_targetSdkVersion', 30)
+    versionCode 1
+    versionName "0.0.1"
+  }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
+  buildTypes {
+    release {
+      minifyEnabled false
     }
-    lintOptions {
-        disable 'GradleCompatible'
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+  }
+  lintOptions {
+    disable 'GradleCompatible'
+  }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 }
 
 repositories {
-    mavenLocal()
-    maven {
-        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-        url("$rootDir/../node_modules/react-native/android")
-    }
-    google()
-    mavenCentral()
-    jcenter()
+  flatDir {
+    dirs 'libs'
+  }
+  mavenLocal()
+  maven {
+    // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+    url("$rootDir/../node_modules/react-native/android")
+  }
+  google()
+  mavenCentral()
+  jcenter()
 }
 
 dependencies {
-    //noinspection GradleDynamicVersion
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+  //noinspection GradleDynamicVersion
+  implementation fileTree(dir: "libs", include: ["*.aar"])
+  implementation "com.facebook.react:react-native:+"  // From node_modules
 }
